--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="card-body">
           <img class="qrcode middle"
             src="https://qcloudimg.tencent-cloud.cn/raw/89b46988d3cd73d8a56e76a1b82bb377.png" />
-          <small class="card-text" style="display: flex; justify-content: center; margin-top: 8px">张哥牛逼啊!</small>
+          <small class="card-text" style="display: flex; justify-content: center; margin-top: 8px">张哥牛逼啊!!!!</small>
         </div>
       </div>
       <div>
